Data types prettified.

--- a/index.html
+++ b/index.html
@@ -70,8 +70,13 @@
           <section>
             <h2>Data Types</h2>
             <p>Every type has 1 signature, 1 or more constructor</p>
-            <p>Data Bool = True | False</p>
-            <p>Data Maybe a = Nothing | Just a</p>
+            <p>Type and Constructor exported separately</p>
+<!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #333399; font-weight: bold">Data</span> <span style="color: #333399; font-weight: bold">Bool</span> <span style="color: #000000; font-weight: bold">=</span> <span style="color: #333399; font-weight: bold">True</span> <span style="color: #333333">|</span> <span style="color: #333399; font-weight: bold">False</span>
+</pre></div>
+</br>
+<!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #333399; font-weight: bold">Data</span> <span style="color: #333399; font-weight: bold">Maybe</span> a <span style="color: #000000; font-weight: bold">=</span> <span style="color: #333399; font-weight: bold">Nothing</span> <span style="color: #333333">|</span> <span style="color: #333399; font-weight: bold">Just</span> a
+</pre></div>
+
           </section>
           <section>
             <h2>TypeClasses</h2>
