List comprehension example.

--- a/index.html
+++ b/index.html
@@ -168,6 +168,13 @@
             <section>
               <h2>The List Monad</h2>
               <p>Used for list comprehensions</p>
+              <!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">[<span style="color: #0000DD; font-weight: bold">3</span>,<span style="color: #0000DD; font-weight: bold">4</span>,<span style="color: #0000DD; font-weight: bold">5</span>] <span style="color: #333333">&gt;&gt;=</span> <span style="color: #0066BB; font-weight: bold">\</span>x <span style="color: #000000; font-weight: bold">-&gt;</span> [x,<span style="color: #333333">-</span>x]
+</pre></div>
+</br>
+<!-- HTML generated using hilite.me --><div style="background: #ffffff; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">[y <span style="color: #333333">|</span> x <span style="color: #000000; font-weight: bold">&lt;-</span> [<span style="color: #0000DD; font-weight: bold">1</span>, <span style="color: #0000DD; font-weight: bold">2</span>, <span style="color: #0000DD; font-weight: bold">3</span>, <span style="color: #0000DD; font-weight: bold">4</span>], y <span style="color: #000000; font-weight: bold">&lt;-</span> [x, <span style="color: #333333">-</span>x]]
+</pre></div>
+
+
             </section>
             <section>
               <h2>The State Monad</h2>
